--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">
-                  <span class="glyphicon glyphicon-book" aria-hidden="true">BookStore</span>
-              </a>
-            </div>
-             <div id="navbar" class="navbar-collapse collapse">
-              <form class="navbar-form navbar-right">
-                <button (click)="auth.login()"  class="btn btn-success btn-sm">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Sign In
-                </button>
-                <button (click)="auth.logout()"  class="btn btn-success btn-sm">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Sign Out
-                </button>
-              </form>
-            </div><!--/.navbar-collapse -->
-           
-          </div>
-        </nav>
-        <div class="container">
-                <br/><br/><br/>
-               <!--  <router-outlet></router-outlet> -->
-        </div>
-        </div>
-
+<app-home></app-home>
