--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,4 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../src/assets/css/font-awesome.min.css';
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeng/resources/themes/omega/theme.css';
